fixed posts being covered by header

--- a/wp/wp-content/themes/roots/assets/css/base.css
+++ b/wp/wp-content/themes/roots/assets/css/base.css
@@ -303,7 +303,7 @@ line-height: 2em
 }
 
 article.type-post{
-  padding-top: 110px;
+  padding-top: 160px;
 }
 
 /* Footer */
